<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/home"
        android:title="@string/admin_home" />

    <item
        android:id="@+id/navigation_facilities"
        android:icon="@drawable/facilities"
        android:title="@string/admin_facilities" />

    <item
        android:id="@+id/navigation_users"
        android:icon="@drawable/group_users"
        android:title="@string/admin_users" />

    <item
        android:id="@+id/navigation_images"
        android:icon="@drawable/images"
        android:title="@string/admin_images" />

    <item
        android:id="@+id/navigation_qr"
        android:icon="@drawable/qr_code_bottom_bar"
        android:title="@string/admin_qr" />
</menu>