...
    <item
        android:id="@+id/qrActivity"
        android:icon="@drawable/qr_code_bottom_bar"
        android:title="@string/title_qr" />

    <item
        android:id="@+id/profileActivity"
        android:icon="@drawable/profile_bottom_bar"
        android:title="@string/title_profile" />

</menu>
