...
    android:focusable="true"
    tools:context=".view.admin.AdminActivity"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="0dp">

    <Button
        android:id="@+id/switchAdmin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:text="Leave Admin"
        app:layout_constraintEnd_toEndOf="parent"
...
